ssl dump ground

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+      "start": "next start",
+      "start-custom": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -14,7 +15,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-tinacms-github": "^0.35.0",
-    "styled-components": "^5.2.1",
+      "styled-components": "^5.2.1",
     "tinacms": "^0.34.0"
   },
   "devDependencies": {
